# Cpp-CMake-Template

./: .gitignore  CMakeLists.txt  build.sh  config.yml
docs/: Doxyfile
src/: file.cpp  file.h  main.cpp
