cmake_minimum_required(VERSION 3.0)


PROJECT(projectname)
SET(APPLICATION_NAME "Project Name")
SET(APPLICATION_CODENAME "${PROJECT_NAME}")
SET(APPLICATION_COPYRIGHT_YEARS "2014")
SET(APPLICATION_VERSION_MAJOR 1)
SET(APPLICATION_VERSION_MINOR 0)
SET(APPLICATION_VERSION_PATCH 0)
SET(APPLICATION_VERSION_TYPE SNAPSHOT)
SET(APPLICATION_VERSION_STRING "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}.${APPLICATION_VERSION_PATCH}-${APPLICATION_VERSION_TYPE}")
SET(APPLICATION_VENDOR_ID "com.yourcompany")
SET(APPLICATION_VENDOR_NAME "Your Company")
SET(APPLICATION_VENDOR_URL "yourcompany.com")
SET(APPLICATION_ID "${APPLICATION_VENDOR_ID}.${PROJECT_NAME}")

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Debug)
endif()
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O2")
set(CMAKE_CXX_STANDARD "14")
set(EXE_NAME "app" CACHE STRING "Executable Name, passed by argument to cmake")

aux_source_directory("src/" SRC_LIST)

project(${EXE_NAME})
add_executable(${EXE_NAME} ${SRC_LIST})

## Link your libraries here.

## CPack Packager
# set(CPACK_GENERATOR "DEB")
# set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Borderliner")
# include(CPack)
